# llm_cholec_organ

./: .gitignore  CACHE_GUIDE.md  CLAUDE.md  FIGURE_UPDATES.md  README.md  README_endopoint.md  REFACTORING_SUMMARY.md  VISUALIZATION_README.md  VLM_IMPLEMENTATION_SUMMARY.md  VLM_VLLM_FIX_SUMMARY.md  commit_refactoring.sh  pyproject.toml  run_vllm_evaluation.sh  test_llama_cholec.py  test_llama_cholec_comprehensive.py  test_llama_evaluator.py  test_llama_response_fix.py  test_local_dataset.py
claude/: README.md
claude_code_commands/: 00-recap.md  01-refactor-code.md  02-cell-selection-implementation.md  02-few-shot-learning-implementation.md  03-fix-pointing-evaluation.md  05-new-evaluation-notebooks.md
configs/: dataset_cholecseg8k.yaml  dataset_endoscape.yaml
experiment_setup/: exp_pointing.md  near_miss.md
notebooks/: choose_examples.ipynb  data_processing.ipynb  existence.ipynb  load_cholec_organs.ipynb  load_gonogo_organs.ipynb  load_local_cholecseg8k.ipynb  main_table.ipynb  pointing.ipynb  pointing_few_shot.ipynb  prototype.ipynb  roboflow_test.ipynb  show_examples.ipynb  surgical_llama.ipynb  test_all_models_cholec.py  test_endopoint_simple.py  test_models.ipynb  test_refactoring.ipynb  test_unified_fewshot.ipynb  test_unified_fewshot_simplified.ipynb  test_video_split.py  test_vlm_cholec.py
notebooks_py/: CELL_SELECTION_README.md  CELL_SELECTION_STATUS.md  clear_cache.py  convert_point_to_bbox_plan.py  debug_cache.py  diagnose_fewshot.py  eval_all_pointing.sh  eval_all_pointing_api.sh  eval_all_pointing_vllm.sh  eval_all_separate.sh  eval_all_separate_test.sh  eval_both_advanced.sh  eval_both_persistent.sh  eval_cell_selection_original_size.py  eval_cell_selection_original_size_fixed.py  eval_cell_selection_simple.py  eval_cell_selection_standalone.py  eval_pointing.py  eval_pointing_examples.sh  eval_pointing_original_size.py  eval_pointing_standalone.py  generate_examples_pdf.py  generate_examples_simple.py  generate_latex_figures.py  generate_paper_examples.py  prepare_fewshot_examples.py  prepare_fewshot_examples_bounding_box.py  regenerate_metrics_comparison.py  simple_evaluation.py  test_bbox_generation.py  test_cell_selection.py  verify_fewshot.py  (+5 more)
(+119 files in other folders)
